<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_home_bg"
    android:orientation="vertical">

    <include
        layout="@layout/comm_loyout_head"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_centerVertical="true"
            android:id="@+id/tv_consumption_differential"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/payment_consumption_differential"/>
        <TextView
            android:id="@+id/payment_consumption_differential"
            android:layout_toRightOf="@id/tv_consumption_differential"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_selected"
            android:textSize="14sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="1dp"
            android:layout_margin="3dp"
            android:background="@drawable/background_item_cray_bg"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_centerVertical="true"
            android:id="@+id/tv_payment_transfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/payment_transfer"/>
        <TextView
            android:id="@+id/payment_payment_transfer"
            android:layout_toRightOf="@id/tv_payment_transfer"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_selected"
            android:textSize="14sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="1dp"
            android:layout_margin="3dp"
            android:background="@drawable/background_item_cray_bg"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_centerVertical="true"
            android:id="@+id/tv_transfer_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/payment_transfer_phone"/>
        <TextView
            android:id="@+id/payment_payment_tv_transfer_phone"
            android:layout_toRightOf="@id/tv_transfer_phone"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_selected"
            android:textSize="14sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="1dp"
            android:layout_margin="3dp"
            android:background="@drawable/background_item_cray_bg"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_centerVertical="true"
            android:id="@+id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/payment_payment_amount"/>
        <TextView
            android:id="@+id/payment_payment_tv_amount"
            android:layout_toRightOf="@id/tv_amount"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_selected"
            android:textSize="14sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="1dp"
            android:layout_margin="3dp"
            android:background="@drawable/background_item_cray_bg"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:text="@string/payment_account_number_transfer"/>

    <include
        layout="@layout/order_account"/>

    <ProgressBar
                android:visibility="gone"
                android:id="@+id/bar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100" />
            <TextView
                android:visibility="gone"
                android:id="@+id/output_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:text="@string/payment_upload_payment_voucher"/>

    <RelativeLayout
        android:id="@+id/rl_upload"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layerType="software"
        android:background="@drawable/background_upload_qr_code">

        <TextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_goto_upload_payment_voucher"
            android:textSize="12sp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>
        <ImageView
            android:id="@+id/iv_upload"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </RelativeLayout>


    <TextView
        android:paddingLeft="15dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/payment_text_enter_password"/>


        <EditText
            android:id="@+id/et_pay_psw"
            android:layout_marginTop="3dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="15dp"
            android:hint="@string/payment_enter_password"
            android:textSize="12sp"
            android:textColorHint="@color/white"
            android:background="@color/color_head_bg"
            android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tv_commit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:background="@drawable/background_item_cray_bg"
                android:gravity="center"
                android:text="@string/title_certify_commit"
                android:textColor="#ffffff"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
